--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,32 +1,12 @@
-<web-app id="WebApp_ID" version="2.4" 
- xmlns="http://java.sun.com/xml/ns/j2ee" 
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
- xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
- http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"> 
- 
- 	<display-name>Task List by Spray</display-name> 
- 	<servlet> 
- 	<servlet-name>mvc-dispatcher</servlet-name> 
- 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> 
- 		<init-param> 
- 			<param-name>contextConfigLocation</param-name> 
- 			<param-value>/WEB-INF/conf/applicationContext.xml</param-value> 
- 		</init-param> 
- 		<load-on-startup>1</load-on-startup> 
- 	</servlet> 
- 	
- 	<servlet-mapping> 
- 		<servlet-name>mvc-dispatcher</servlet-name> 
- 		<url-pattern>/</url-pattern> 
- 	</servlet-mapping> 
- 	
- 	<context-param> 
- 		<param-name>contextConfigLocation</param-name> 
- 		<param-value>/WEB-INF/conf/rootApplicationContext.xml</param-value> 
- 	</context-param> 
- 	
- 	<listener> 
- 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
- 	</listener> 
- 	
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" id="WebApp_ID">
+	<display-name>tasklist</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
